--- a/app/main/amp_main_solo.html
+++ b/app/main/amp_main_solo.html
@@ -62,6 +62,7 @@
         <div class="headerbar">
             <div class="head-main-menu">
                 <em class="ys-icon ys-icon-amp-s"></em>
+                <span id="beta">AMP PAAS Beta1.0 2016</span>
             </div>
             <div class="pageheader clearfix active">
                 <a href="#" class="amp-solo-close"></a>
@@ -71,6 +72,7 @@
                     <li><a href="#">设定</a></li>
                     <li class="active">推算</li>
                 </ol>
+
             </div>
         </div><!-- headerbar -->
     </div>
@@ -84,6 +86,7 @@
                         <li><a ui-sref="rpgindex" href="#/rpgindex"  target="_parent">租金包</a></li>
                         <li class="active">设定</li>
                     </ol>
+
                 </div>
 
                 <div class="amp-header-breadcrumb" ng-show="shownav">
