--- a/app/main/amp_main_ag.html
+++ b/app/main/amp_main_ag.html
@@ -106,6 +106,10 @@
                 <ul class="nav nav-pills nav-stacked nav-bracket">
 
                 </ul>
+
+            </div>
+            <div class="system-toggle">
+                <span id="beta">AMP PAAS Beta1.0 2016</span>
             </div>
         </div><!-- leftpanelinner -->
     </div><!-- leftpanel -->
