--- a/app/main/main.html
+++ b/app/main/main.html
@@ -114,7 +114,7 @@
 
     <div class="ys-footer">
         <div class="container">
-            <span>Copyright © 2016 YUESHANG 上海悦商信息科技有限公司 <em>沪ICP备15034598号</em> 沪网文[2016]0005-005号</span>
+            <span>AMP PAAS Beta1.0 2016</span>
         </div>
     </div><!--ys-footer-->
 </main><!--end main-->
