--- a/app/login.html
+++ b/app/login.html
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <!-- 导入CSS -->
-    <link href="/static/css/login/login.css" rel="stylesheet">
+    <link href="./static/css/login/login.css" rel="stylesheet">
 </head>
 <body>
 <!-- Preloader -->
@@ -26,7 +26,7 @@
         <div class="login-wrapper">
             <h3><em class="ys-icon ys-icon-amp"></em></h3>
             <div class="form-wrapper">
-                <form name="veriform" id="veriform" action="mainPage.html" method="post">
+                <form name="veriform" id="veriform" action="./main/mainPage.html" method="post">
                     <div class="input-group user-wrapper">
                         <input id="phone" name="phone" type="tel" placeholder="手机号" autocomplete="off"/>
                     </div>
@@ -43,7 +43,7 @@
             </div>
         </div>
     </div>
-<script src="/static/dist/js/jquery-1.11.3.min.js"></script>
+<script src="./static/dist/js/jquery-1.11.3.min.js"></script>
 <script>
     $(document).ready(function(){
         $('#preloader').delay(350).fadeOut(function(){
