--- a/app/main/main.html
+++ b/app/main/main.html
@@ -21,7 +21,7 @@
     <!-- JavaScript -->
     <!-- 第三方js -->
 </head>
-<body>
+<body style="background-color:#eceff4;">
 <!--[if lt IE 9]>
 <p class="updateBrowser">您的浏览器太旧了，请更新最新浏览器，以获得最佳效果.</p>
 <![endif]-->
@@ -64,31 +64,31 @@
                     <th>
                         <h5>1号项目</h5>
                         <div class="t-opt">
-                            <span><a href="amp_main_ag_router.html">进入详情</a>|<a href="create_project.html">修改信息</a></span>
+                            <span><a href="amp_main_ag.html">进入详情</a>|<a href="create_project.html">修改信息</a></span>
                         </div>
                     </th>
                     <td>
-                        <span class="t-main">462.01</span>
+                        <span class="t-main">50,462.01</span>
                         <span class="t-sub">89.12%</span>
                     </td>
                     <td>
                         <span class="t-main">435.88</span>
-                        <span class="t-sub">回报率:<i>89.12%</i></span>
+                        <span class="t-sub">回报率:<i>6.12%</i></span>
                         <span class="t-sub">完成率:<i>90.32%</i></span>
                     </td>
                     <td>
-                        <span class="t-main">26.13</span>
-                        <span class="t-sub">156.37</span>
+                        <span class="t-main">216.57</span>
+                        <span class="t-sub">2,652.32</span>
                     </td>
                     <td>
-                        <span class="t-main">7%</span>
-                        <span class="t-sub">7.5%</span>
+                        <span class="t-main">45,569</span>
+                        <span class="t-sub">5.82%</span>
                     </td>
                     <td class="amp-pm-td">
                         <div class="amp-pm">
                             <em class="ys-figure" style="background-image:url(../static/images/male.png);"></em>
                             <div class="amp-pm-info">
-                                <h5>王涛</h5>
+                                <h5 class="text-note">王总</h5>
                                 <span class="t-sub">营运经理</span>
                                 <span class="t-sub">团队人数<i>12</i></span>
                                 <div class="t-opt">
