--- a/app/main/create_project_res.html
+++ b/app/main/create_project_res.html
@@ -1,5 +1,39 @@
+<!DOCTYPE html>
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="" lang="zh-cn"> <!--<![endif]-->
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <title>悦商AMP</title>
+    <meta name="description" content="">
+    <!--<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">-->
+    <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+    <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="../static/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../static/dist/css/bootstrap-datetimepicker.min.css">
+    <link rel="stylesheet" href="../static/css/common/common.css">
+    <!--扩展 css-->
+    <link rel="stylesheet" href="../static/css/main/main.css">
+    <style type="text/css">
+        /* Good CSS */
+    </style>
+    <!-- JavaScript -->
+    <!-- 第三方js -->
+</head>
+<body>
+<!--[if lt IE 9]>
+<p class="updateBrowser">您的浏览器太旧了，请更新最新浏览器，以获得最佳效果.</p>
+<![endif]-->
+
+<!-- Preloader -->
+<div id="preloader">
+    <div id="status"><i class="fa fa-spinner fa-spin"></i></div>
+</div>
+
 <!-- Add your site or application content here -->
-<main class="ys-amp" id="ys-amp-create" role="main" ng-controller="pjCreateController">
+<main class="ys-amp" id="ys-amp-create" role="main">
     <!-- 主面板 -->
     <div class="ys-main-panel">
         <div class="ys-content-header">
@@ -70,3 +104,56 @@
         </div>
     </div><!--ys-footer-->
 </main><!--end main-->
+<!-- Script 导入部分 -->
+<script src="../static/dist/js/jquery-1.11.3.min.js"></script>
+<script src="../static/dist/js/bootstrap.min.js"></script>
+<!--<script src="static/dist/js/echarts-all.js"></script>-->
+<script src="../static/dist/js/plugins.js"></script>
+<script src="../static/dist/js/bootstrap-datetimepicker.min.js"></script>
+<script src="../static/dist/js/bootstrap-datetimepicker.zh-CN.js"></script>
+<script>
+    $(document).ready(function(){
+        $('#preloader').delay(350).fadeOut(function(){
+            //start
+        });
+
+        $("#open-date").datetimepicker({
+            format: "yyyy-mm-dd",
+            autoclose: true,
+            todayBtn: true,
+            pickerPosition: "bottom-left",
+            startView:3,
+            minView:2,
+            maxView:4,
+            language:"zh-CN"
+
+        });
+        $(".input-select").each(function(i,e){
+            var curVal=$(this).find("input").val();
+            if(curVal!=""){
+                $(this).find("button.dropdown-toggle>em").text(curVal);
+                $(this).find(".dropdown-menu a").each(function(i,e){
+                    if($(this).text().trim()==curVal){
+                        $(this).closest("li").addClass("active");
+                    }
+                });
+            }
+        });
+
+        $(".input-select").on("click",".dropdown-menu a",function(e){
+            var $select=$(this).closest(".input-select");
+            var $this=$(this);
+            e.preventDefault();
+            var curSelect=$this.text().trim();
+            $this.closest("ul.dropdown-menu").find("li").removeClass("active");
+            $this.parent("li").addClass("active");
+
+            $select.find("button.dropdown-toggle>em").text(curSelect);
+            $select.find("input").val(curSelect);
+
+        });
+
+    });
+</script>
+</body>
+</html>
