--- a/app/main/create_project.html
+++ b/app/main/create_project.html
@@ -1,29 +1,32 @@
 <!-- Add your site or application content here -->
-<main class="ys-amp" id="ys-amp-create" role="main" ng-controller="pjCreateController">
+<main class="ys-amp" id="ys-amp-create" role="main">
     <!-- 主面板 -->
     <div class="ys-main-panel">
         <div class="ys-content-header">
             <h1><em class="ys-icon ys-icon-amp"></em></h1>
         </div>
         <div class="ys-content-panel container clearfix">
-            <div class="ys-block amp-create-project clearfix">
-                <h3>建立您的第一个项目</h3>
-                <form name="creat_project" id="create_project">
+            <form ng-submit="ctrl.submit()" name="project" id="project">
+            <div class="ys-block amp-create-project clearfix" ng-switch on="ctrl.index">
+                    <h3 ng-switch-when="0">建立您的第一个项目</h3>
+                    <h3 ng-switch-when="update">修改项目信息</h3>
+                    <h3 ng-switch-default>建立新项目</h3>
+
                     <div class="col-xs-6">
                         <div class="input-wrapper pull-right">
                             <div class="input-group">
                                 <label>项目</label>
-                                <input type="text" placeholder=" " value="">
+                                <input ng-model="ctrl.project.name" type="text" placeholder="" value="" >
                             </div>
 
                             <div class="input-group" id="open-date-wrapper">
                                 <label>开业时间</label>
-                                <input type="text" placeholder=" " value="" class="datepicker" id="open-date" readonly>
+                                <input ng-model="ctrl.project.opendate" type="text" placeholder="" value="" class="datepicker" id="open-date" readonly>
                             </div>
 
                             <div class="input-group">
                                 <label>团队人数</label>
-                                <input type="text" placeholder=" " value="">
+                                <input ng-model="ctrl.project.pm.teamNum" type="text" placeholder="" value="">
                             </div>
                         </div>
                     </div><!--col-xs-6-->
@@ -31,7 +34,7 @@
                         <div class="input-wrapper pull-left ">
                             <div class="input-group input-select">
                                 <label>面积</label>
-                                <input type="text" placeholder=" " value="" hidden>
+                                <input ng-model="ctrl.project.proportionType" type="text" placeholder=" " value="" hidden>
                                 <div class="dropdown">
                                     <button class="btn dropdown-toggle" type="button" data-toggle="dropdown">
                                         <em>请选择</em><span class="ys-icon ys-icon-dropdown"></span>
@@ -45,20 +48,20 @@
 
                             <div class="input-group">
                                 <label>负责人</label>
-                                <input type="text" placeholder="" value="">
+                                <input ng-model="ctrl.project.pm.name" type="text" placeholder="" value="">
                             </div>
                             <div class="input-group">
                                 <label>位置</label>
-                                <input type="text" placeholder="" value="">
+                                <input ng-model="ctrl.project.position" type="text" placeholder="" value="">
                             </div>
                         </div>
                     </div><!--col-xs-6-->
-                </form>
-            </div>
 
-            <div class="amp-opt-block">
-                <a href="main.html" class="btn amp-btn amp-btn-lg amp-btn-save" id="btn-amp-create">保存</a>
             </div>
+            <div class="amp-opt-block">
+                <button   type="submit" href="main.html" class="btn amp-btn amp-btn-lg amp-btn-save" id="btn-amp-create">保存</button>
+            </div>
+            </form>
         </div><!--end content-panel-->
 
     </div><!--end main-panel-->
@@ -70,3 +73,9 @@
         </div>
     </div><!--ys-footer-->
 </main><!--end main-->
+<script src="../static/js/main/create_update.js"></script>
+<script>
+    $(document).ready(function(){
+        project_create.init()
+    });
+</script>
