--- a/app/main/main.html
+++ b/app/main/main.html
@@ -14,6 +14,7 @@
     <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="../static/dist/css/bootstrap.min.css">
     <link href="../static/dist/css/animate.css" rel="stylesheet">
+    <link rel="stylesheet" href="../static/dist/css/bootstrap-datetimepicker.min.css">
     <link rel="stylesheet" href="../static/css/common/common.css">
     <!--扩展 css-->
     <link rel="stylesheet" href="../static/css/main/main.css">
@@ -28,7 +29,11 @@
 
     <script src="../static/dist/js/bootstrap.min.js"></script>
     <script src="../static/dist/js/plugins.js"></script>
+    <script src="../static/dist/js/bootstrap-datetimepicker.min.js"></script>
+    <script src="../static/dist/js/bootstrap-datetimepicker.zh-CN.js"></script>
+
     <script src="../static/js/main/main.js"></script>
+    <script src="../static/js/main/main_services.js"></script>
     <script>
         $(document).ready(function(){
             $('#preloader').delay(350).fadeOut(function(){
@@ -49,9 +54,6 @@
 <!-- Add your site or application content here -->
 <div ui-view="content" class="animated"
      ng-class="{'view-back': state.back, 'view-to-home': state.toHome, 'view-exit': state.exit, 'fadeOut': state.exit,'fadeIn': state.enter, 'view-enter': state.enter, 'view-loading': state.loading}">
-
-
 </div>
-
 </body>
 </html>
