--- a/app/main/main_ag.html
+++ b/app/main/main_ag.html
@@ -27,11 +27,11 @@
                 </tr>
                 </thead>
                 <tbody>
-                <tr ng-repeat="project in projects">
+                <tr ng-repeat="project in listCtrl.projects">
                     <th>
                         <h5 id={{$index}}>{{project.name}}</h5>
                         <div class="t-opt">
-                            <span><a href="amp_main_ag.html?projectId={{$index}}">进入详情</a>|<a href="#/create?projectId={{$index}}">修改信息</a></span>
+                            <span><a href="amp_main_ag.html?projectid={{$index}}#/noi">进入详情</a>|<a href="#/update/{{$index}}">修改信息</a></span>
                         </div>
                     </th>
                     <td>
@@ -73,7 +73,7 @@
                     是最有效的资产管理平台和数据增值系统<br></p>
             </div>-->
             <div class="amp-opt-block">
-                <a href="create_project.html" class="btn amp-btn amp-btn-lg">新建项目</a>
+                <a href="#/create" class="btn amp-btn amp-btn-lg">新建项目</a>
             </div>
         </div><!--end content-panel-->
 
