--- a/app/main/amp_main_ag.html
+++ b/app/main/amp_main_ag.html
@@ -30,10 +30,10 @@
     <link href="../components/toolbar/filter.css" rel="stylesheet">
     <link href="../static/css/views/datatools.css" rel="stylesheet">
 
-    <link href="../static/css/common/amp_common.css" rel="stylesheet">
+    <!--<link href="../static/css/common/amp_common.css" rel="stylesheet">
     <link href="../static/css/common/amp_page_structure.css" rel="stylesheet">
     <link href="../static/css/common/component.css" rel="stylesheet">
-    <link href="../static/css/common/amp_animation.css" rel="stylesheet">
+    <link href="../static/css/common/amp_animation.css" rel="stylesheet">-->
 
 
     <script src="../static/dist/js/jquery-1.11.3.min.js"></script>
@@ -53,10 +53,10 @@
     <script src="../static/js/main/menu_list.js"></script>
     <script src="../static/js/main/amp_main.js"></script>
     <script src="../static/js/main/amp_ag.js"></script>
-    <script src="../static/js/main/controllers.js"></script>
-    <script src="../static/js/main/filters.js"></script>
-    <script src="../static/js/main/services.js"></script>
 
+    <script src="../static/js/views/noi_analyse/noi_controller.js"></script>
+    <script src="../static/js/views/noi_analyse/noi_services.js"></script>
+    <script src="../static/js/views/noi_analyse/noi_filters.js"></script>
     <script>
         $(window).load(function() {
             amp_main.placeholder_init();
