--- a/app/main/amp_main_ag.html
+++ b/app/main/amp_main_ag.html
@@ -57,6 +57,7 @@
     <script src="../static/js/views/noi_analyse/noi_controller.js"></script>
     <script src="../static/js/views/noi_analyse/noi_services.js"></script>
     <script src="../static/js/views/noi_analyse/noi_filters.js"></script>
+    <script src="../static/js/views/noi_analyse/noi_directives.js"></script>
     <script>
         $(window).load(function() {
             amp_main.placeholder_init();
