--- a/app/main/amp_main_ag.html
+++ b/app/main/amp_main_ag.html
@@ -58,6 +58,9 @@
     <script src="../static/js/views/noi_analyse/noi_services.js"></script>
     <script src="../static/js/views/noi_analyse/noi_filters.js"></script>
     <script src="../static/js/views/noi_analyse/noi_directives.js"></script>
+
+    <script src="../components/toolbar/filter_controller.js"></script>
+    <script src="../components/toolbar/filter_directives.js"></script>
     <script>
         $(window).load(function() {
             amp_main.placeholder_init();
