--- a/app/main/amp_main_ag.html
+++ b/app/main/amp_main_ag.html
@@ -6,6 +6,9 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+<!--
+    <meta name="viewport" content="width=1680, initial-scale=1, maximum-scale=1, user-scalable=no">-->
+    <meta name="viewport" content="width=1680">
     <title>悦商AMP</title>
     <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
 
@@ -83,7 +86,7 @@
                     window.location.href=href;
                 }
             });*/
-            amp_main.init();
+            //amp_main.init();
 
         });
     </script>
