--- a/app/main/amp_main_solo.html
+++ b/app/main/amp_main_solo.html
@@ -6,7 +6,8 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=1680, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <meta name="viewport" content="width=1680">
+    <!--<meta name="viewport" content="width=1680, initial-scale=1, maximum-scale=1, user-scalable=no">-->
     <title>悦商AMP</title>
     <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
 
