--- a/app/main/amp_main_ag.html
+++ b/app/main/amp_main_ag.html
@@ -71,6 +71,8 @@
     <script src="../static/js/views/datatools/datatool_directive.js"></script>
 
 
+    <script src="../static/js/main/snap.svg.js"></script>
+
     <script>
         $(window).load(function() {
             amp_main.placeholder_init();
