--- a/app/main/amp_main_ag.html
+++ b/app/main/amp_main_ag.html
@@ -52,6 +52,8 @@
     <script src="../static/dist/js/echarts.common.min.js"></script>
     <script src="../static/dist/js/bootstrap-datetimepicker.min.js"></script>
     <script src="../static/dist/js/bootstrap-datetimepicker.zh-CN.js"></script>
+
+    <script src="../static/js/views/datatools/finacial.js"></script>
 <!--    <script src="../static/js/main/me-pageloading.js"></script>-->
     <script src="../static/js/main/menu_list.js"></script>
     <script src="../static/js/main/amp_main.js"></script>
