--- a/app/main/main_res.html
+++ b/app/main/main_res.html
@@ -41,7 +41,7 @@
         </div>
         <div class="ys-content-panel container clearfix">
 
-            <table class="table table-hover amp-table" id="amp-projects-table">
+            <!--<table class="table table-hover amp-table" id="amp-projects-table">
                 <colgroup>
                     <col width="16%">
                     <col width="12%">
@@ -98,14 +98,14 @@
                             </div>
                         </div>
                     </td>
-                </tr><!--tr-->
+                </tr>&lt;!&ndash;tr&ndash;&gt;
                 </tbody>
-            </table>
-           <!-- <div class="ys-block amp-create-project">
+            </table>-->
+            <div class="ys-block amp-create-project">
                 <h3>还没有在AMP创建任何项目</h3>
                 <p>AMP为您提供专业的资产估值服务<br>
                     是最有效的资产管理平台和数据增值系统<br></p>
-            </div>-->
+            </div>
             <div class="amp-opt-block">
                 <a href="create_project.html" class="btn amp-btn amp-btn-lg">新建项目</a>
             </div>
