--- a/app/main/create_project.html
+++ b/app/main/create_project.html
@@ -59,7 +59,10 @@
 
             </div>
             <div class="amp-opt-block">
-                <button   type="submit" href="main.html" class="btn amp-btn amp-btn-lg amp-btn-save" id="btn-amp-create">保存</button>
+                <button   type="submit" href="main.html" class="btn amp-btn amp-btn-lg amp-btn-save ys-tips"  id="btn-amp-create" data-toggle="tooltip" data-placement="top"  title="新建项目功能将于12月6日开通">保存
+                    <em class="ys-amp-icon ys-icon-tips"style="margin-top: -11px;left: 50%;margin-left:145px;"></em>
+                </button>
+               <!-- <em class="ys-amp-icon ys-icon-tips ys-tips" data-toggle="tooltip" data-placement="right" title="新建项目功能将于12月6日开通" style="margin-top: -11px;left: 50%;margin-left:145px;"></em>-->
             </div>
             </form>
         </div><!--end content-panel-->
