--- a/app/main/main_ag.html
+++ b/app/main/main_ag.html
@@ -74,6 +74,7 @@
             </div>-->
             <div class="amp-opt-block">
                 <a href="#/create" class="btn amp-btn amp-btn-lg">新建项目</a>
+               <!-- <em class="ys-amp-icon ys-icon-tips ys-tips" data-toggle="tooltip" data-placement="right" title="新建项目功能将于12月6日开通" style="margin-top: -11px;left: 50%;margin-left:145px;"></em>-->
             </div>
         </div><!--end content-panel-->
 
