--- a/app/main/amp_main_ag.html
+++ b/app/main/amp_main_ag.html
@@ -134,7 +134,7 @@
         var i=0;
         $(document).ready(function(){
             setInterval(function(){
-                ampTimeCountDown(2016,10,26)
+                ampTimeCountDown(2016,11,15)
             },1000);
         });
     </script>
@@ -187,7 +187,7 @@
             </div>
             <div class="header-right" id="countdown-wrapper">
                 <!--<span class="ys-figure ys-useer-figure"></span>-->
-                <span id="countdown"><em class="ys-amp-icon ys-icon-clock"></em>数据工具模块开通倒计时<span id="countdown-nums"><i class="countdown-num">0</i><i class="countdown-num">3</i></span><em class="unit">天</em></span>
+                <span id="countdown"><em class="ys-amp-icon ys-icon-clock"></em>新功能升级，分析工具和数据整合服务体验(12月15日)倒计时<span id="countdown-nums"><i class="countdown-num">0</i><i class="countdown-num">3</i></span><em class="unit">天</em></span>
             </div>
 
         </div><!-- headerbar -->
