--- a/app/main/main_ag.html
+++ b/app/main/main_ag.html
@@ -73,7 +73,7 @@
                     是最有效的资产管理平台和数据增值系统<br></p>
             </div>-->
             <div class="amp-opt-block">
-                <a href="#/create" class="btn amp-btn amp-btn-lg ys-tips" data-toggle="tooltip" data-placement="top"  title="新建项目功能将于12月6日开通">新建项目
+                <a href="javascript:void(0)" class="btn amp-btn amp-btn-lg ys-tips" data-toggle="tooltip" data-placement="top"  title="新建项目功能将于12月6日开通">新建项目
                     <em class="ys-amp-icon ys-icon-tips"style="margin-top: -11px;left: 50%;margin-left:145px;"></em>
                 </a>
                <!-- <em class="ys-amp-icon ys-icon-tips ys-tips" data-toggle="tooltip" data-placement="right" title="新建项目功能将于12月6日开通" style="margin-top: -11px;left: 50%;margin-left:145px;"></em>-->
