--- a/app/main/amp_main_ag.html
+++ b/app/main/amp_main_ag.html
@@ -187,7 +187,7 @@
             </div>
             <div class="header-right" id="countdown-wrapper">
                 <!--<span class="ys-figure ys-useer-figure"></span>-->
-                <span id="countdown"><em class="ys-amp-icon ys-icon-clock"></em>全部功能启用，(12月6日)开放新建项目和投资分析模拟测算<span id="countdown-nums"><i class="countdown-num">0</i><i class="countdown-num">0</i></span><em class="unit">天</em></span>
+                <span id="countdown"><em class="ys-amp-icon ys-icon-clock"></em>(12月6日)全部功能启用，开放新建项目和投资分析模拟测算,还剩<span id="countdown-nums"><i class="countdown-num">0</i><i class="countdown-num">0</i></span><em class="unit">天</em></span>
             </div>
 
         </div><!-- headerbar -->
