--- a/app/main/main_ag.html
+++ b/app/main/main_ag.html
@@ -39,7 +39,7 @@
                         <span class="t-sub">{{project.openRate}}</span>
                     </td>
                     <td>
-                        <span class="t-main">{{project.income}}</span>
+                        <span class="t-main">{{project.income|number:2}}</span>
                         <span class="t-sub">回报率:<i>{{project.irr}}</i></span>
                         <span class="t-sub">完成率:<i>{{project.complete}}</i></span>
                     </td>
