--- a/app/mgt_analysis/contract_main.html
+++ b/app/mgt_analysis/contract_main.html
@@ -140,7 +140,7 @@
                                     </td>
                                     <td>
                                         <span>提成百分比</span>
-                                        <div class="amp-input amp-input-default amp-input-32"><input value="{{item.deductPercent}}"/></div>
+                                        <div class="amp-input amp-input-default amp-input-32"><input value="{{item.deductPercent|percentFormat}}"/></div>
                                     </td>
                                     <td>
                                         <span>物管费总额</span>
