--- a/app/m/main.html
+++ b/app/m/main.html
@@ -2,8 +2,13 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>My App</title>
+    <title>悦商AMP</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimal-ui" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="yes" />
 
+    <link rel="shortcut icon" href="/assets/img/favicon.png" type="image/x-icon" />
     <!-- Only required for desktop -->
     <link rel="stylesheet" href="../static/dist/css/mobile-angular-ui-hover.css" />
     <!-- Always required -->
@@ -11,22 +16,25 @@
     <!-- Only required for desktop -->
     <link rel="stylesheet" href="../static/dist/css/mobile-angular-ui-desktop.css" />
 
+    <link href="../static/dist/css/swiper.min.css" rel="stylesheet">
+    <link href="../static/dist/css/animate.css" rel="stylesheet">
+
+    <script src="../static/dist/js/jquery-1.11.3.min.js"></script>
     <script src="../static/dist/js/angular.min.js"></script>
-    <!--<script src="../static/dist/js/angular-ui-router.min.js"></script>-->
-    <script src="../static/dist/js/angular-route.js"></script>
+    <script src="../static/dist/js/angular-animate.min.js"></script>
+    <!--<script src="../static/dist/js/angular-route.js"></script>
+    <script src="../static/dist/js/angular-ui-router.js"></script>-->
+    <script src="../static/dist/js/angular-ui-router.min.js"></script>
     <script src="../static/dist/js/mobile-angular-ui.min.js"></script>
-    <script type="text/javascript">
-        angular.module('myApp', [
-            'ngRoute',
-            'mobile-angular-ui'
-        ]);
-    </script>
+
+    <script src="../static/js/m/amp_main_m.js"></script>
+
 </head>
-<body ng-app="myApp">
+<body ng-app="myApp" ng-controller="MainController">
 
 <!-- Sidebars -->
-<!--<div class="sidebar sidebar-left">&lt;!&ndash; ... &ndash;&gt;</div>
-<div class="sidebar sidebar-right">&lt;!&ndash; ... &ndash;&gt;</div>-->
+<div class="sidebar sidebar-left"><!-- ... --></div>
+<div class="sidebar sidebar-right"><!-- ... --></div>
 
 <div class="app">
     <div class="navbar navbar-app navbar-absolute-top"><!-- Top Navbar --></div>
@@ -34,71 +42,16 @@
 
     <!-- App body -->
     <div class='app-body'>
-        <div class='app-content'>
-            <div class="panel-group" ui-state="myAccordion" ui-default="2">
-
-                <div class="panel panel-default" ng-repeat="i in [1,2,3]">
-                    <div class="panel-heading" ui-set="{'myAccordion': i}">
-                        <h4 class="panel-title">
-                            Collapsible Group Item #{{i}}
-                        </h4>
-                    </div>
-                    <div ui-if="myAccordion == {{i}}">
-                        <div class="panel-body">
-                            {{lorem}}
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="btn-group">
-                <a ui-turn-on='myDropdown' class='btn'>
-                   Btn DropDown <i class="fa fa-ellipsis-v"></i>
-                </a>
-                <ul
-                        class="dropdown-menu"
-                        ui-outer-click="Ui.turnOff('myDropdown')"
-                        ui-outer-click-if="Ui.active('myDropdown')"
-                        role="menu"
-                        ui-show="myDropdown"
-                        ui-state="myDropdown"
-                        ui-turn-off="myDropdown">
-
-                    <li><a>Action</a></li>
-                    <li><a>Another action</a></li>
-                    <li><a>Something else here</a></li>
-                    <li class="divider"></li>
-                    <li><a>Separated link</a></li>
-                </ul>
-            </div>
-            <ng-view>
-            </ng-view>
+        <div ng-show="loading" class="app-content-loading">
+            <i class="fa fa-spinner fa-spin loading-spinner"></i>
         </div>
-        <div ui-yield-to="modals">Modal test</div>
-        <div ui-content-for="modals">
-            <div class="modal modal-overlay" ui-if='modal2' ui-shared-state='modal2'>
-                <div class="modal-dialog">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <button class="close"
-                                    ui-turn-off="modal2">&times;</button>
-                            <h4 class="modal-title">Modal title</h4>
-                        </div>
-                        <div class="modal-body">
-                            <p>Lorem ipsum ...</p>
-                        </div>
-                        <div class="modal-footer">
-                            <button ui-turn-off="modal2" class="btn btn-default">Close</button>
-                            <button ui-turn-off="modal2" class="btn btn-primary">Save changes</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
+        <div class='app-content'>
+
         </div>
     </div>
 </div><!-- ~ .app -->
 
 <!-- Modals and Overlays -->
-<!--<div ui-yield-to="modals"></div>-->
+<div ui-yield-to="modals"></div>
 </body>
 </html>
