--- a/app/m/index.html
+++ b/app/m/index.html
@@ -23,6 +23,7 @@
     <!--<script src="../static/dist/js/angular-ui-router.min.js"></script>-->
     <script src="../static/dist/js/angular-route.js"></script>
     <script src="../static/dist/js/mobile-angular-ui.min.js"></script>
+    <script src="../static/dist/js/mobile-angular-ui.gestures.min.js"></script>
     <!-- Required to use $touch, $swipe, $drag and $translate services -->
     <!--<script src="/dist/js/mobile-angular-ui.gestures.min.js"></script>-->
     <script src="demo.js"></script>
