--- a/app/m/main.html
+++ b/app/m/main.html
@@ -22,23 +22,55 @@
     <script src="../static/dist/js/jquery-1.11.3.min.js"></script>
     <script src="../static/dist/js/angular.min.js"></script>
     <script src="../static/dist/js/angular-animate.min.js"></script>
-    <!--<script src="../static/dist/js/angular-route.js"></script>
+    <!--<script src="../static/dist/js/angular-route.js"></script>-->
+    <!--&lt;!&ndash;<script src="../static/dist/js/angular-route.js"></script>
     <script src="../static/dist/js/angular-ui-router.js"></script>-->
     <script src="../static/dist/js/angular-ui-router.min.js"></script>
     <script src="../static/dist/js/mobile-angular-ui.min.js"></script>
+    <script src="../static/dist/js/mobile-angular-ui.gestures.min.js"></script>
 
     <script src="../static/js/m/amp_main_m.js"></script>
 
+    <script src="../static/js/views/noi_analyse/noi_controller_m.js"></script>
+    <script src="../static/js/views/noi_analyse/noi_services.js"></script>
+    <script src="../static/js/views/noi_analyse/noi_filters.js"></script>
+    <script src="../static/js/views/noi_analyse/noi_directives.js"></script>
+
 </head>
-<body ng-app="myApp" ng-controller="MainController">
+<body ng-app="amp" ng-controller="MainController">
 
 <!-- Sidebars -->
 <div class="sidebar sidebar-left"><!-- ... --></div>
 <div class="sidebar sidebar-right"><!-- ... --></div>
 
 <div class="app">
-    <div class="navbar navbar-app navbar-absolute-top"><!-- Top Navbar --></div>
-    <div class="navbar navbar-app navbar-absolute-bottom"><!-- Bottom Navbar --></div>
+    <div class="navbar navbar-app navbar-absolute-top">
+        <!--nav top-->
+        <div>
+            <div class="navbar-brand navbar-brand-center" ui-yield-to="title">
+                Mobile Angular UI
+            </div>
+            <div class="btn-group pull-left">
+                <div ui-toggle="uiSidebarLeft" class="btn sidebar-toggle">
+                    <i class="fa fa-bars"></i> Menu
+                </div>
+            </div>
+            <div class="btn-group pull-right" ui-yield-to="navbarAction">
+                <div ui-toggle="uiSidebarRight" class="btn sidebar-right-toggle">
+                    <i class="fa fa-comment"></i> Chat
+                </div>
+            </div>
+        </div>
+
+    </div><!-- nav top-->
+    <div class="navbar navbar-app navbar-absolute-bottom">
+        <!--nav bottom-->
+        <div class="btn-group justified">
+            <a  class="btn btn-navbar"><i class="fa fa-home fa-navbar"></i> Docs</a>
+            <a  class="btn btn-navbar"><i class="fa fa-github fa-navbar"></i> Sources</a>
+            <a  class="btn btn-navbar"><i class="fa fa-exclamation-circle fa-navbar"></i> Issues</a>
+        </div>
+    </div><!--nav bottom-->
 
     <!-- App body -->
     <div class='app-body'>
@@ -46,10 +78,11 @@
             <i class="fa fa-spinner fa-spin loading-spinner"></i>
         </div>
         <div class='app-content'>
+            <div ui-view="content" class="animated"></div>
 
         </div>
-    </div>
-</div><!-- ~ .app -->
+    </div><!--app body-->
+</div><!--app -->
 
 <!-- Modals and Overlays -->
 <div ui-yield-to="modals"></div>
