--- a/app/m/main.html
+++ b/app/m/main.html
@@ -29,6 +29,8 @@
     <script src="../static/dist/js/mobile-angular-ui.min.js"></script>
     <script src="../static/dist/js/mobile-angular-ui.gestures.min.js"></script>
 
+    <script src="../static/dist/js/echarts.common.min.js"></script>
+
     <script src="../static/js/m/amp_main_m.js"></script>
 
     <script src="../static/js/views/noi_analyse/noi_controller_m.js"></script>
