--- a/app/m/main.html
+++ b/app/m/main.html
@@ -19,6 +19,8 @@
     <link href="../static/dist/css/swiper.min.css" rel="stylesheet">
     <link href="../static/dist/css/animate.css" rel="stylesheet">
 
+    <link href="../static/css/main/amp_main_m.css" rel="stylesheet">
+
     <script src="../static/dist/js/jquery-1.11.3.min.js"></script>
     <script src="../static/dist/js/angular.min.js"></script>
     <script src="../static/dist/js/angular-animate.min.js"></script>
