--- a/app/main/main_ag.html
+++ b/app/main/main_ag.html
@@ -35,28 +35,28 @@
                         </div>
                     </th>
                     <td>
-                        <span class="t-main">{{project.proportion}}</span>
-                        <span class="t-sub">{{project.openRate}}</span>
+                        <span class="t-main">{{project.proportion|default:"-"}}</span>
+                        <span class="t-sub">{{project.openRate| default:"-" | percentFormat}}</span>
                     </td>
                     <td>
                         <span class="t-main">{{project.income|number:2}}</span>
-                        <span class="t-sub">回报率:<i>{{project.irr}}</i></span>
-                        <span class="t-sub">完成率:<i>{{project.complete}}</i></span>
+                        <span class="t-sub">回报率:<i>{{project.irr| default:"-" | percentFormat}}</i></span>
+                        <span class="t-sub">完成率:<i>{{project.complete | default:"-" | percentFormat}}</i></span>
                     </td>
                     <td>
-                        <span class="t-main">{{project.noi.monthly}}</span>
-                        <span class="t-sub">{{project.noi.yearly}}</span>
+                        <span class="t-main">{{project.noi.monthly|default:"-"}}</span>
+                        <span class="t-sub">{{project.noi.yearly|default:"-"}}</span>
                     </td>
                     <td>
-                        <span class="t-main">{{project.asset.value}}</span>
-                        <span class="t-sub">{{project.asset.rate}}</span>
+                        <span class="t-main">{{project.asset.value|default:"-"}}</span>
+                        <span class="t-sub">{{project.asset.rate| default:"-" | percentFormat}}</span>
                     </td>
                     <td class="amp-pm-td">
                         <div class="amp-pm">
                             <em class="ys-figure" style="background-image:url(../static/images/{{project.pm.figure}});"></em>
                             <div class="amp-pm-info">
-                                <h5 class="text-note">{{project.pm.name}}</h5>
-                                <span class="t-sub">{{project.pm.title}}</span>
+                                <h5 class="text-note">{{project.pm.name|default:"-"}}</h5>
+                                <span class="t-sub">{{project.pm.title|default:"-"}}</span>
                                 <span class="t-sub">团队人数<i>{{project.pm.teamNum}}</i></span>
                                 <div class="t-opt">
                                     <span class="not-allowed"><a href="#">联系他</a>|<a href="#">查看简历</a></span>
@@ -73,7 +73,7 @@
                     是最有效的资产管理平台和数据增值系统<br></p>
             </div>-->
             <div class="amp-opt-block">
-                <a href="javascript:void(0)" class="btn amp-btn amp-btn-lg ys-tips" data-toggle="tooltip" data-placement="top"  title="新建项目功能将于12月6日开通">新建项目
+                <a href="#/create" class="btn amp-btn amp-btn-lg ys-tips" data-toggle="tooltip" data-placement="top"  title="新建项目功能将于12月6日开通">新建项目
                     <em class="ys-amp-icon ys-icon-tips"style="margin-top: -11px;left: 50%;margin-left:145px;"></em>
                 </a>
                <!-- <em class="ys-amp-icon ys-icon-tips ys-tips" data-toggle="tooltip" data-placement="right" title="新建项目功能将于12月6日开通" style="margin-top: -11px;left: 50%;margin-left:145px;"></em>-->
