--- a/app/m/index.html
+++ b/app/m/index.html
@@ -32,8 +32,7 @@
   <body
     ng-app="MobileAngularUiExamples"
     ng-controller="MainController"
-    ui-prevent-touchmove-defaults
-    >
+    ui-prevent-touchmove-defaults>
 
     <!-- Sidebars -->
     <div ng-include="'sidebar.html'"
