--- a/app/main/amp_main_ag.html
+++ b/app/main/amp_main_ag.html
@@ -60,6 +60,8 @@
     <script src="../static/js/main/menu_list.js"></script>
     <script src="../static/js/main/amp_main.js"></script>
     <script src="../static/js/main/amp_ag.js"></script>
+    <script src="../static/js/views/datatools/svgeditor.js"></script>
+
     <script src="../static/js/main/timecount.js"></script>
     <script src="../static/js/main/filters.js"></script>
 	<script src="../static/js/common/service/amp_common_service.js"></script>
