--- a/app/main/amp_main_ag.html
+++ b/app/main/amp_main_ag.html
@@ -183,10 +183,19 @@
             <div class="head-main-menu">
                 <!-- Nav tabs -->
             </div>
-            <div class="header-right" id="countdown-wrapper">
-                <!--<span class="ys-figure ys-useer-figure"></span>-->
+
+            <div class="header-right">
+                <a class="ys-user" id="ys-user">用户名</a>
+                <a class="ys-logout" id="ys-logout">退出</a>
+            </div>
+
+
+          <!--  <div class="header-right" id="countdown-wrapper">
+                &lt;!&ndash;<span class="ys-figure ys-useer-figure"></span>&ndash;&gt;
                 <span id="countdown"><em class="ys-amp-icon ys-icon-clock"></em>(12月6日)全部功能启用，开放新建项目和投资分析模拟测算,还剩<span id="countdown-nums"><i class="countdown-num">0</i><i class="countdown-num">0</i></span><em class="unit">天</em></span>
             </div>
+-->
+
 
         </div><!-- headerbar -->
     </div>
