--- a/m/main_ori.html
+++ b/m/main_ori.html
@@ -68,9 +68,33 @@
     <div class="navbar navbar-app navbar-absolute-bottom">
         <!--nav bottom-->
         <div class="btn-group justified">
-            <a ng-repeat="menuItem in mCtrl.menu" class="btn btn-navbar" ui-sref="{{menuItem.links}}" ui-sref-active="active">
-                 <span class="ampMenu-wrapper">
-                    <i class="amp-menu" ng-class="menuItem.icon"></i>{{menuItem.name}}
+            <a class="btn btn-navbar" ui-sref="noi" ui-sref-active="active">
+                <span class="ampMenu-wrapper">
+                    <i class="amp-menu amp-menu-noi"></i>存量
+                </span>
+            </a>
+
+            <a class="btn btn-navbar" ui-sref="noi" ui-sref-active="active">
+                <span class="ampMenu-wrapper">
+                    <i class="amp-menu amp-menu-invest"></i>投资
+                </span>
+            </a>
+
+            <a class="btn btn-navbar" ui-sref="noi" ui-sref-active="active">
+                <span class="ampMenu-wrapper">
+                    <i class="amp-menu amp-menu-manage"></i>管理
+                </span>
+            </a>
+
+            <a class="btn btn-navbar" ui-sref="noi" ui-sref-active="active">
+                <span class="ampMenu-wrapper">
+                    <i class="amp-menu amp-menu-ctrl"></i>风控
+                </span>
+            </a>
+
+            <a class="btn btn-navbar" ui-sref="noi" ui-sref-active="active">
+                <span class="ampMenu-wrapper">
+                    <i class="amp-menu amp-menu-data"></i>数据
                 </span>
             </a>
         </div>
